@@ -1,6 +1,6 @@
 .\" Manpage for valentina.
 .\" Contact dismine@gmail.com to correct errors.
-.TH valentina 1 "12 October, 2017" "valentina man page"
+.TH valentina 1 "10 December, 2017" "valentina man page"
 .SH NAME
 Valentina \- Pattern making program.
 .SH SYNOPSIS
@@ -148,7 +148,16 @@ The path to output destination folder. By default the directory at which the app
 .BR "*" " Roll 42in = 10,"
 .RE
 .RS
-.BR "*" " Roll 44in = 11."
+.BR "*" " Roll 44in = 11,"
+.RE
+.RS
+.BR "*" " Roll 48in = 12,"
+.RE
+.RS
+.BR "*" " Roll 62in = 13,"
+.RE
+.RS
+.BR "*" " Roll 72in = 14."
 .RE
 .IP "-W, --pagew <The page width>"
 .RB "Page width in current units like 12.0 (cannot be used with \*(lqpageformat\*(rq, " "export mode" ")."
