@@ -32,6 +32,7 @@
 - [#772] New tool Duplicate detail.
 - [#726] Improve Move tool. Add optional rotate option.
 - [#774] New feature. Matching Parentheses.
+- [#779] Add more roll paper size templates.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
